Fixed lobby UI issues and connection errors.